--- a/index.html
+++ b/index.html
@@ -1,74 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head <link rel="stylesheet" href="style.css">
-
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Airport Delays Made Clear</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-        header {
-            background-color: #0056b3;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2.5em;
-        }
-        header p {
-            margin: 0;
-            font-size: 1.2em;
-        }
-        main {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-        }
-        section {
-            margin-bottom: 40px;
-        }
-        section img {
-            width: 100%;
-            max-width: 100%;
-            border-radius: 8px;
-            margin-bottom: 15px;
-        }
-        section h2 {
-            color: #0056b3;
-            font-size: 1.8em;
-            margin-bottom: 10px;
-        }
-        section p {
-            margin-bottom: 15px;
-        }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #0056b3;
-            color: white;
-            margin-top: 20px;
-        }
-        footer a {
-            color: #f4f4f9;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        footer a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -79,21 +15,33 @@
         <section>
             <img src="images/departure-board-traveler.png" alt="Traveler viewing a departure board">
             <h2>Understanding Passenger Needs</h2>
-            <p>Airports can be overwhelming, especially during delays. Our project explores how to make flight information clearer, reducing passenger stress and confusion.</p>
+            <p>
+                Airports can be overwhelming, especially during delays. Our project explores how to make flight 
+                information clearer, reducing passenger stress and confusion.
+            </p>
         </section>
         <section>
             <img src="images/terminal-passenger-waiting.png" alt="Passenger waiting in the terminal">
             <h2>Scenario Analysis</h2>
-            <p>Consider Marco, who’s waiting at the terminal for his daughter's delayed flight. He needs accurate, helpful information to understand the situation. Clear communication tools are key to meeting his goals.</p>
+            <p>
+                Consider Marco, who’s waiting at the terminal for his daughter's delayed flight. He needs accurate, 
+                helpful information to understand the situation. Clear communication tools are key to meeting his goals.
+            </p>
         </section>
         <section>
             <img src="images/flight-status-update.png" alt="Updated flight status screen">
             <h2>Proposed Solution</h2>
-            <p>By providing clear, friendly messages like, "We're sorry for the delay to your flight. Please continue to monitor the airport screens and check the Flight Tracker for updates," passengers feel more informed and supported.</p>
+            <p>
+                By providing clear, friendly messages like, "We're sorry for the delay to your flight. Please continue to monitor 
+                the airport screens and check the Flight Tracker for updates," passengers feel more informed and supported.
+            </p>
         </section>
     </main>
     <footer>
-        <p>Explore more of my work on <a href="https://github.com/GFiorino">GitHub</a>.</p>
+        <p>
+            Explore more of my work on 
+            <a href="https://github.com/GFiorino" target="_blank">GitHub</a>.
+        </p>
     </footer>
 </body>
 </html>
