--- a/index.html
+++ b/index.html
@@ -12,36 +12,30 @@
         <p>Enhancing Passenger Communication with Clear and Friendly Messaging</p>
     </header>
     <main>
-        <section>
+        <div class="card">
             <img src="images/departure-board-traveler.png" alt="Traveler viewing a departure board">
-            <h2>Understanding Passenger Needs</h2>
-            <p>
-                Airports can be overwhelming, especially during delays. Our project explores how to make flight 
-                information clearer, reducing passenger stress and confusion.
-            </p>
-        </section>
-        <section>
+            <div class="card-content">
+                <h2>Understanding Passenger Needs</h2>
+                <p>Airports can be overwhelming, especially during delays. Our project explores how to make flight information clearer, reducing passenger stress and confusion.</p>
+            </div>
+        </div>
+        <div class="card">
             <img src="images/terminal-passenger-waiting.png" alt="Passenger waiting in the terminal">
-            <h2>Scenario Analysis</h2>
-            <p>
-                Consider Marco, who’s waiting at the terminal for his daughter's delayed flight. He needs accurate, 
-                helpful information to understand the situation. Clear communication tools are key to meeting his goals.
-            </p>
-        </section>
-        <section>
+            <div class="card-content">
+                <h2>Scenario Analysis</h2>
+                <p>Consider Marco, who’s waiting at the terminal for his daughter's delayed flight. He needs accurate, helpful information to understand the situation. Clear communication tools are key to meeting his goals.</p>
+            </div>
+        </div>
+        <div class="card">
             <img src="images/flight-status-update.png" alt="Updated flight status screen">
-            <h2>Proposed Solution</h2>
-            <p>
-                By providing clear, friendly messages like, "We're sorry for the delay to your flight. Please continue to monitor 
-                the airport screens and check the Flight Tracker for updates," passengers feel more informed and supported.
-            </p>
-        </section>
+            <div class="card-content">
+                <h2>Proposed Solution</h2>
+                <p>By providing clear, friendly messages like, "We're sorry for the delay to your flight. Please continue to monitor the airport screens and check the Flight Tracker for updates," passengers feel more informed and supported.</p>
+            </div>
+        </div>
     </main>
     <footer>
-        <p>
-            Explore more of my work on 
-            <a href="https://github.com/GFiorino" target="_blank">GitHub</a>.
-        </p>
+        <p>Explore more of my work on <a href="https://github.com/GFiorino">GitHub</a>.</p>
     </footer>
 </body>
 </html>
