--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Airport Delays Made Clear</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -15,22 +15,25 @@
         <div class="card">
             <img src="images/departure-board-traveler.png" alt="Traveler viewing a departure board">
             <div class="card-content">
-                <h2>Understanding Passenger Needs</h2>
-                <p>Airports can be overwhelming, especially during delays. Our project explores how to make flight information clearer, reducing passenger stress and confusion.</p>
+                <h2>Flight Delayed Messages</h2>
+                <p>Airports and flight details can be confusing. In this microcopy project, I provide an example of how to be clear while using a friendly tone.</p>
             </div>
         </div>
         <div class="card">
             <img src="images/terminal-passenger-waiting.png" alt="Passenger waiting in the terminal">
             <div class="card-content">
-                <h2>Scenario Analysis</h2>
-                <p>Consider Marco, who’s waiting at the terminal for his daughter's delayed flight. He needs accurate, helpful information to understand the situation. Clear communication tools are key to meeting his goals.</p>
+                <h2>Scenario</h2>
+                <p>Marco needs to pick his daughter up at the airport, but her flight is delayed. Marco doesn’t know what to do and feels stressed. He would like to know more about the condition of the flight his daughter is on.</p>
+                <p><strong>Problem:</strong> Flight Delayed</p>
+                <p><strong>User Goal:</strong> Get more information</p>
+                <p><strong>Business Goal:</strong> Reduce confusion for passengers</p>
             </div>
         </div>
         <div class="card">
             <img src="images/flight-status-update.png" alt="Updated flight status screen">
             <div class="card-content">
                 <h2>Proposed Solution</h2>
-                <p>By providing clear, friendly messages like, "We're sorry for the delay to your flight. Please continue to monitor the airport screens and check the Flight Tracker for updates," passengers feel more informed and supported.</p>
+                <p>By providing clear, friendly messages like, "We’re sorry for the delay to your flight. Please continue to monitor the airport screens and check the Flight Tracker for updates," passengers feel more informed and supported.</p>
             </div>
         </div>
     </main>
