--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <img src="images/flight-status-update.png" alt="Updated flight status screen">
             <div class="card-content">
                 <h2>Proposed Solution</h2>
-                <p>By providing clear, friendly messages like, "We’re sorry for the delay to your flight. Please continue to monitor the airport screens and check the Flight Tracker for updates," passengers feel more informed and supported.</p>
+                <p>Flight information is often presented in a cold and technical manner, failing to address the stress and doubts passengers may feel during delays. By adding clear and empathetic messages such as, "We’re sorry for the delay to your flight. Please continue to monitor the airport screens and check the Flight Tracker for updates," passengers feel informed, reassured, and supported.</p>
+                <p>A few thoughtful words can go a long way in reducing frustration and enhancing trust in airport communication.</p>
             </div>
         </div>
     </main>
