--- a/index.html
+++ b/index.html
@@ -9,37 +9,37 @@
 <body>
     <header>
         <h1>Airport Delays Made Clear</h1>
-        <p>Enhancing Passenger Communication with Clear and Friendly Messaging</p>
+        <p>Simplifying flight communication to reduce passenger stress and confusion</p>
     </header>
     <main>
         <div class="card">
             <img src="images/departure-board-traveler.png" alt="Traveler viewing a departure board">
             <div class="card-content">
                 <h2>Flight Delayed Messages</h2>
-                <p>Airports and flight details can be confusing. In this microcopy project, I provide an example of how to be clear while using a friendly tone.</p>
+                <p>Flight details can be overwhelming and unclear during delays. With a friendly tone and simple words, this project shows how better messages can ease stress for passengers.</p>
             </div>
         </div>
         <div class="card">
             <img src="images/terminal-passenger-waiting.png" alt="Passenger waiting in the terminal">
             <div class="card-content">
                 <h2>Scenario</h2>
-                <p>Marco needs to pick his daughter up at the airport, but her flight is delayed. Marco doesn’t know what to do and feels stressed. He would like to know more about the condition of the flight his daughter is on.</p>
-                <p><strong>Problem:</strong> Flight Delayed</p>
-                <p><strong>User Goal:</strong> Get more information</p>
-                <p><strong>Business Goal:</strong> Reduce confusion for passengers</p>
+                <p>Marco, a passenger waiting for his daughter's delayed flight, feels stressed and confused due to lack of updates. Clear, empathetic communication can help him feel supported.</p>
+                <p><strong>Problem:</strong> Flight delays cause stress and uncertainty.</p>
+                <p><strong>User Goal:</strong> Gain accurate updates and reassurance.</p>
+                <p><strong>Business Goal:</strong> Provide clear information to improve passenger satisfaction.</p>
             </div>
         </div>
         <div class="card">
             <img src="images/flight-status-update.png" alt="Updated flight status screen">
             <div class="card-content">
                 <h2>Proposed Solution</h2>
-                <p>Flight information is often presented in a cold and technical manner, failing to address the stress and doubts passengers may feel during delays. By adding clear and empathetic messages such as, "We’re sorry for the delay to your flight. Please continue to monitor the airport screens and check the Flight Tracker for updates," passengers feel informed, reassured, and supported.</p>
-                <p>A few thoughtful words can go a long way in reducing frustration and enhancing trust in airport communication.</p>
+                <p>Flight updates often feel impersonal and cold, ignoring the stress passengers feel. Simple, empathetic phrases like "We’re sorry for the delay to your flight. Please monitor airport screens or the Flight Tracker for updates" can reassure and support users during delays.</p>
+                <p>By addressing emotional concerns, airlines can build trust and improve the overall passenger experience.</p>
             </div>
         </div>
     </main>
     <footer>
-        <p>Explore more of my work on <a href="https://github.com/GFiorino">GitHub</a>.</p>
+        <p>Discover more of my work on <a href="https://github.com/GFiorino">GitHub</a>.</p>
     </footer>
 </body>
 </html>
