--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <body>
     <header>
         <h1>Airport Delays Made Clear</h1>
-        <p>Simplifying flight communication to reduce passenger stress and confusion</p>
+        <p>Enhancing Passenger Communication with Clear and Friendly Messaging</p>
     </header>
     <main>
         <div class="card">
             <img src="images/departure-board-traveler.png" alt="Traveler viewing a departure board">
             <div class="card-content">
                 <h2>Flight Delayed Messages</h2>
-                <p>Flight details can be overwhelming and unclear during delays. With a friendly tone and simple words, this project shows how better messages can ease stress for passengers.</p>
+                <p>Airports and flight details can be confusing. With a friendly tone and simple words, this project shows how better messages can ease stress for passengers.</p>
             </div>
         </div>
         <div class="card">
-            <img src="images/terminal-passenger-waiting.png" alt="Passenger waiting in the terminal">
+            <img src="images/terminal-passenger.png" alt="Busy airport terminal with passengers">
             <div class="card-content">
                 <h2>Scenario</h2>
                 <p>Marco, a passenger waiting for his daughter's delayed flight, feels stressed and confused due to lack of updates. Clear, empathetic communication can help him feel supported.</p>
@@ -33,13 +33,12 @@
             <img src="images/flight-status-update.png" alt="Updated flight status screen">
             <div class="card-content">
                 <h2>Proposed Solution</h2>
-                <p>Flight updates often feel impersonal and cold, ignoring the stress passengers feel. Simple, empathetic phrases like "We’re sorry for the delay to your flight. Please monitor airport screens or the Flight Tracker for updates" can reassure and support users during delays.</p>
-                <p>By addressing emotional concerns, airlines can build trust and improve the overall passenger experience.</p>
+                <p>Flight updates often feel impersonal and cold, ignoring the stress and doubts passengers face during delays. By adding clear and friendly messages like, "We’re sorry for the delay to your flight. Please continue to monitor the airport screens and check the Flight Tracker for updates," passengers feel reassured and informed about the situation.</p>
             </div>
         </div>
     </main>
     <footer>
-        <p>Discover more of my work on <a href="https://github.com/GFiorino">GitHub</a>.</p>
+        <p>Explore more of my work on <a href="https://github.com/GFiorino">GitHub</a>.</p>
     </footer>
 </body>
 </html>
