--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="images/terminal-passenger.png" alt="Busy airport terminal with passengers">
+            <img src="https://github.com/GFiorino/Airport-Delays-Made-Clear-Enhancing-Passenger-Communication/blob/main/images/terminal-passenger.png?raw=true alt="Busy airport terminal with passengers">
             <div class="card-content">
                 <h2>Scenario</h2>
                 <p>Marco, a passenger waiting for his daughter's delayed flight, feels stressed and confused due to lack of updates. Clear, empathetic communication can help him feel supported.</p>
