--- a/index.html
+++ b/index.html
@@ -29,13 +29,20 @@
                 <p><strong>Business Goal:</strong> Provide clear information to improve passenger satisfaction.</p>
             </div>
         </div>
-        <div class="card">
-            <img src="images/flight-status-update.png" alt="Updated flight status screen">
-            <div class="card-content">
-                <h2>Proposed Solution</h2>
-                <p>Flight updates often feel impersonal and cold, ignoring the stress and doubts passengers face during delays. By adding clear and friendly messages like, "We’re sorry for the delay to your flight. Please continue to monitor the airport screens and check the Flight Tracker for updates," passengers feel reassured and informed about the situation.</p>
-            </div>
-        </div>
+        <div class="card-large">
+    <img src="images/flight-status-update.png" alt="Updated flight status screen">
+    <div class="card-content">
+        <h2>Proposed Solution</h2>
+        <p>
+            Flight updates often feel impersonal and cold, ignoring the stress passengers face during delays.
+            By providing clear, empathetic messages like, <em>"We’re sorry for the delay to your flight. Please continue to monitor the airport screens and check the Flight Tracker for updates,"</em>
+            passengers feel informed and supported.
+        </p>
+        <p>
+            A few thoughtful words can reassure waiting passengers and reduce anxiety, improving overall passenger satisfaction.
+        </p>
+    </div>
+</div>
     </main>
     <footer>
         <p>Explore more of my work on <a href="https://github.com/GFiorino">GitHub</a>.</p>
