--- a/index.html
+++ b/index.html
@@ -16,33 +16,26 @@
             <img src="images/departure-board-traveler.png" alt="Traveler viewing a departure board">
             <div class="card-content">
                 <h2>Flight Delayed Messages</h2>
-                <p>Airports and flight details can be confusing. With a friendly tone and simple words, this project shows how better messages can ease stress for passengers.</p>
+                <p>Flight details can be overwhelming and unclear during delays. With a friendly tone and simple words, this project shows how better messages can ease stress for passengers.</p>
             </div>
         </div>
         <div class="card">
-            <img src="https://github.com/GFiorino/Airport-Delays-Made-Clear-Enhancing-Passenger-Communication/blob/main/images/terminal-passenger.png?raw=true alt="Busy airport terminal with passengers">
+            <img src="images/terminal-passenger.png" alt="Passengers waiting in the terminal">
             <div class="card-content">
                 <h2>Scenario</h2>
-                <p>Marco, a passenger waiting for his daughter's delayed flight, feels stressed and confused due to lack of updates. Clear, empathetic communication can help him feel supported.</p>
+                <p>Marco, a passenger waiting for his daughter’s delayed flight, feels stressed and confused due to lack of updates. Clear, empathetic communication can help him feel supported.</p>
                 <p><strong>Problem:</strong> Flight delays cause stress and uncertainty.</p>
                 <p><strong>User Goal:</strong> Gain accurate updates and reassurance.</p>
                 <p><strong>Business Goal:</strong> Provide clear information to improve passenger satisfaction.</p>
             </div>
         </div>
         <div class="card-large">
-    <img src="images/flight-status-update.png" alt="Updated flight status screen">
-    <div class="card-content">
-        <h2>Proposed Solution</h2>
-        <p>
-            Flight updates often feel impersonal and cold, ignoring the stress passengers face during delays.
-            By providing clear, empathetic messages like, <em>"We’re sorry for the delay to your flight. Please continue to monitor the airport screens and check the Flight Tracker for updates,"</em>
-            passengers feel informed and supported.
-        </p>
-        <p>
-            A few thoughtful words can reassure waiting passengers and reduce anxiety, improving overall passenger satisfaction.
-        </p>
-    </div>
-</div>
+            <img src="images/flight-status-update.png" alt="Flight status update">
+            <div class="card-content">
+                <h2>Proposed Solution</h2>
+                <p>Flight updates often feel impersonal and cold, ignoring the doubts and stress of waiting passengers. By providing clear, friendly messages such as, "We’re sorry for the delay to your flight. Please continue to monitor the airport screens and check the Flight Tracker for updates," passengers feel reassured and supported.</p>
+            </div>
+        </div>
     </main>
     <footer>
         <p>Explore more of my work on <a href="https://github.com/GFiorino">GitHub</a>.</p>
