--- a/index.html
+++ b/index.html
@@ -12,18 +12,15 @@
         <p>Enhancing Passenger Communication with Clear and Friendly Messaging</p>
     </header>
     <main>
-        <!-- First Card -->
         <div class="card">
-            <img src="images/departure-board-traveler.png" alt="Traveler viewing a departure board">
+            <img src="images/departure-board-traveler.png" alt="Traveler viewing a departure board" class="complementary-image">
             <div class="card-content">
                 <h2>Flight Delayed Messages</h2>
                 <p>Flight details can be overwhelming and unclear during delays. With a friendly tone and simple words, this project shows how better messages can ease stress for passengers.</p>
             </div>
         </div>
-
-        <!-- Second Card -->
         <div class="card">
-            <img src="images/terminal-passenger.png" alt="Passengers waiting in the terminal">
+            <img src="images/terminal-passenger.png" alt="Passenger waiting in the terminal" class="complementary-image">
             <div class="card-content">
                 <h2>Scenario</h2>
                 <p>Marco, a passenger waiting for his daughter's delayed flight, feels stressed and confused due to lack of updates. Clear, empathetic communication can help him feel supported.</p>
@@ -32,8 +29,6 @@
                 <p><strong>Business Goal:</strong> Provide clear information to improve passenger satisfaction.</p>
             </div>
         </div>
-
-        <!-- Table Section -->
         <div class="table-section">
             <h2>User-Centered Design Insights</h2>
             <table>
@@ -47,16 +42,12 @@
                 </thead>
                 <tbody>
                     <tr>
+                        <td>Marco needs to pick his daughter at the airport, but her flight is delayed. Marco doesn’t know what to do and feels stressed. He would like to know more about the condition of the flight his daughter is on.</td>
+                        <td>Apology and suggest a solution to alleviate the stress.</td>
                         <td>
-                            Marco needs to pick his daughter at the airport, but her flight is delayed. Marco doesn't know what to do and feels stressed. He would like to know more about the condition of the flight his daughter is on.
-                        </td>
-                        <td>
-                            Apology and suggest a solution to alleviate the stress.
-                        </td>
-                        <td>
-                            <p>We are sorry about the 'time' delayed due to 'reason' in the airport of departure. We are here to help.</p>
-                            <p><strong>Button #1:</strong> <span class="link">Flight Status</span></p>
-                            <p><strong>Button #2:</strong> <span class="link">Customer Support</span></p>
+                            We are sorry about the 'time' delayed due to 'reason' in the airport of departure. We are here to help.<br>
+                            <button>Flight Status</button><br>
+                            <button>Customer Support</button>
                         </td>
                         <td>
                             <ul>
@@ -68,13 +59,11 @@
                 </tbody>
             </table>
         </div>
-
-        <!-- Last Card -->
-        <div class="card card-large">
-            <img src="images/flight-update.png" alt="Flight status update display">
+        <div class="card large-card">
+            <img src="images/flight-update.png" alt="Flight update screen" class="highlight-image">
             <div class="card-content">
                 <h2>Proposed Solution</h2>
-                <p>Flight updates often feel impersonal and cold, ignoring the stress and doubts of passengers. Clear, empathetic messaging such as "We're sorry for the delay to your flight. Please monitor the airport screens and check the Flight Tracker for updates" can provide clarity and reassurance.</p>
+                <p>Flight updates often feel impersonal and cold, ignoring the stress and doubts of those waiting. By providing clear, friendly messages like "We’re sorry for the delay to your flight. Please continue to monitor the airport screens and check the Flight Tracker for updates," passengers feel more informed and reassured.</p>
             </div>
         </div>
     </main>
