--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     </header>
     <main>
         <div class="card">
-            <img src="images/departure-board-traveler.png" alt="Traveler viewing a departure board" class="complementary-image">
+            <img src="images/departure-board-traveler.png" alt="Traveler viewing a departure board">
             <div class="card-content">
                 <h2>Flight Delayed Messages</h2>
                 <p>Flight details can be overwhelming and unclear during delays. With a friendly tone and simple words, this project shows how better messages can ease stress for passengers.</p>
             </div>
         </div>
         <div class="card">
-            <img src="images/terminal-passenger.png" alt="Passenger waiting in the terminal" class="complementary-image">
+            <img src="images/terminal-passenger.png" alt="Passenger waiting in the terminal">
             <div class="card-content">
                 <h2>Scenario</h2>
                 <p>Marco, a passenger waiting for his daughter's delayed flight, feels stressed and confused due to lack of updates. Clear, empathetic communication can help him feel supported.</p>
@@ -29,7 +29,14 @@
                 <p><strong>Business Goal:</strong> Provide clear information to improve passenger satisfaction.</p>
             </div>
         </div>
-        <div class="table-section">
+        <div class="card">
+            <img src="images/flight-update.png" alt="Flight status update">
+            <div class="card-content">
+                <h2>Proposed Solution</h2>
+                <p>Flight updates often feel impersonal and cold, ignoring the passenger's stress and doubts. A simple message like, "We're sorry for the delay to your flight. Please check airport screens for updates," gives a sense of reassurance and clarity.</p>
+            </div>
+        </div>
+        <div class="table-container">
             <h2>User-Centered Design Insights</h2>
             <table>
                 <thead>
@@ -42,29 +49,22 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Marco needs to pick his daughter at the airport, but her flight is delayed. Marco doesn’t know what to do and feels stressed. He would like to know more about the condition of the flight his daughter is on.</td>
+                        <td>Marco needs to pick his daughter at the airport, but her flight is delayed. Marco doesn't know what to do and feels stressed. He would like to know more about the condition of the flight his daughter is on.</td>
                         <td>Apology and suggest a solution to alleviate the stress.</td>
                         <td>
                             We are sorry about the 'time' delayed due to 'reason' in the airport of departure. We are here to help.<br>
-                            <button>Flight Status</button><br>
-                            <button>Customer Support</button>
+                            <strong>Button #1:</strong> <span class="button-link">Flight Status</span><br>
+                            <strong>Button #2:</strong> <span class="button-link">Customer Support</span>
                         </td>
                         <td>
                             <ul>
                                 <li>The flight status button gives the User a sense of control over the situation.</li>
-                                <li>The customer support button helps the User feel less alone in a situation of stress.</li>
+                                <li>The customer support button helps the User feel less alone in a stressful situation.</li>
                             </ul>
                         </td>
                     </tr>
                 </tbody>
             </table>
-        </div>
-        <div class="card large-card">
-            <img src="images/flight-update.png" alt="Flight update screen" class="highlight-image">
-            <div class="card-content">
-                <h2>Proposed Solution</h2>
-                <p>Flight updates often feel impersonal and cold, ignoring the stress and doubts of those waiting. By providing clear, friendly messages like "We’re sorry for the delay to your flight. Please continue to monitor the airport screens and check the Flight Tracker for updates," passengers feel more informed and reassured.</p>
-            </div>
         </div>
     </main>
     <footer>
