--- a/index.html
+++ b/index.html
@@ -1,84 +1,55 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Airport Delays Made Clear</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-    <header>
-        <h1>Airport Delays Made Clear</h1>
-        <p>Enhancing Passenger Communication with Clear and Friendly Messaging</p>
-    </header>
-
-    <main>
-        <div class="card">
-            <img src="images/departure-board-traveler.png" alt="Traveler viewing a departure board">
-            <div class="card-content">
-                <h2>Flight Delayed Messages</h2>
-                <p>Flight details can be overwhelming and unclear during delays. With a friendly tone and simple words, this
-                    project shows how better messages can ease stress for passengers.</p>
-            </div>
+<div class="card-container">
+    <div class="card">
+        <img src="images/departure-board-traveler.png" alt="Traveler viewing a departure board">
+        <div class="card-content">
+            <h2>Flight Delayed Messages</h2>
+            <p>Flight details can be overwhelming and unclear during delays. With a friendly tone and simple words, this project shows how better messages can ease stress for passengers.</p>
         </div>
+    </div>
 
-        <div class="card">
-            <img src="images/terminal-passenger.png" alt="Busy airport terminal">
-            <div class="card-content">
-                <h2>Scenario</h2>
-                <p>Marco, a passenger waiting for his daughter's delayed flight, feels stressed and confused due to lack of
-                    updates. Clear, empathetic communication can help him feel supported.</p>
-                <p><strong>Problem:</strong> Flight delays cause stress and uncertainty.</p>
-                <p><strong>User Goal:</strong> Gain accurate updates and reassurance.</p>
-                <p><strong>Business Goal:</strong> Provide clear information to improve passenger satisfaction.</p>
-            </div>
+    <div class="card">
+        <img src="images/terminal-passenger.png" alt="Passenger waiting in the terminal">
+        <div class="card-content">
+            <h2>Scenario</h2>
+            <p>Marco, a passenger waiting for his daughter's delayed flight, feels stressed and confused due to lack of updates. Clear, empathetic communication can help him feel supported.</p>
+            <p><strong>Problem:</strong> Flight delays cause stress and uncertainty.</p>
+            <p><strong>User Goal:</strong> Gain accurate updates and reassurance.</p>
+            <p><strong>Business Goal:</strong> Provide clear information to improve passenger satisfaction.</p>
         </div>
+    </div>
 
-        <div class="card">
-            <img src="images/flight-update.png" alt="Flight status update">
-            <div class="card-content">
-                <h2>Proposed Solution</h2>
-                <p>Flight updates often feel impersonal and cold, ignoring the doubts and stress passengers experience. By
-                    integrating a friendly tone and clear steps, we help passengers feel informed and reassured.</p>
-            </div>
+    <div class="card">
+        <img src="images/flight-update.png" alt="Flight status update screen">
+        <div class="card-content">
+            <h2>Proposed Solution</h2>
+            <p>Flight updates often feel impersonal and cold, ignoring the doubts and stress passengers experience. By integrating a friendly tone and clear steps, we help passengers feel informed and reassured.</p>
         </div>
+    </div>
+</div>
 
-        <div class="table-section">
-            <h2>User-Centered Design Insights</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Scenario</th>
-                        <th>Content Description</th>
-                        <th>Content Element</th>
-                        <th>Rationale</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Marco needs to pick his daughter at the airport, but her flight is delayed. Marco doesn't know
-                            what to do and feels stressed. He would like to know more about the condition of the flight his
-                            daughter is on.</td>
-                        <td>Apology and suggest a solution to alleviate the stress.</td>
-                        <td>
-                            We are sorry about the 'time' delayed due to 'reason' in the airport of departure. We are here
-                            to help.<br>
-                            <strong>Button #1:</strong> <span style="color: #ffcc00;">Flight Status</span><br>
-                            <strong>Button #2:</strong> <span style="color: #ff6600;">Customer Support</span>
-                        </td>
-                        <td>
-                            <ul>
-                                <li>The flight status button gives the user a sense of control over the situation.</li>
-                                <li>The customer support button helps the user feel less alone in a stressful situation.</li>
-                            </ul>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </main>
-</body>
-
-</html>
+<div class="table-container">
+    <h2>User-Centered Design Insights</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Scenario</th>
+                <th>Content Description</th>
+                <th>Content Element</th>
+                <th>Rationale</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Marco needs to pick his daughter at the airport, but her flight is delayed. Marco doesn’t know what to do and feels stressed. He would like to know more about the condition of the flight his daughter is on.</td>
+                <td>Apology and suggest a solution to alleviate the stress.</td>
+                <td>We are sorry about the 'time' delayed due to 'reason' in the airport of departure. We are here to help.<br><strong>Button #1:</strong> Flight Status<br><strong>Button #2:</strong> Customer Support</td>
+                <td>
+                    <ul>
+                        <li>The flight status button gives the User a sense of control over the situation.</li>
+                        <li>The customer support button helps the User feel less alone in a situation of stress.</li>
+                    </ul>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
