--- a/index.html
+++ b/index.html
@@ -35,15 +35,17 @@
         </section>
 
         <!-- Third Card -->
-        <section class="card last-card">
-            <img src="images/flight-update.png" alt="Flight status update">
-            <div class="card-content">
-                <h2>Proposed Solution</h2>
-                <p>Flight updates often feel impersonal and cold, ignoring the doubts and stress passengers experience. By integrating a friendly tone and clear steps, we help passengers feel informed and reassured.</p>
-            </div>
-        </section>
+<section class="card last-card">
+    <div class="card-image">
+        <img src="images/flight-update.png" alt="Flight status update">
+    </div>
+    <div class="card-text">
+        <h2>Proposed Solution</h2>
+        <p>Flight updates often feel impersonal and cold, ignoring the doubts and stress passengers experience. By integrating a friendly tone and clear steps, we help passengers feel informed and reassured.</p>
+    </div>
+</section>
 
-       <!-- Table Section -->
+<!-- Table Section -->
 <section class="table-container">
     <div class="table-title">User-Centered Design Insights</div>
     <table>
