--- a/index.html
+++ b/index.html
@@ -33,41 +33,43 @@
                 <p><strong>Business Goal:</strong> Provide clear information to improve passenger satisfaction.</p>
             </div>
         </section>
-<!-- Third Card -->
-<section class="card last-card">
-    <div class="card-image">
-        <img src="images/flight-update.png" alt="Flight status update">
-    </div>
-    <div class="card-text">
-        <h2>Proposed Solution</h2>
-        <p>Flight updates often feel impersonal and cold, ignoring the doubts and stress passengers experience. By integrating a friendly tone and clear steps, we help passengers feel informed and reassured.</p>
-    </div>
-</section>
 
-<!-- Table Section -->
-<section class="table-container">
-    <div class="table-title">User-Centered Design Insights</div>
-    <table>
-        <thead>
-            <tr class="table-header">
-                <th>Scenario</th>
-                <th>Content Description</th>
-                <th>Content Element</th>
-                <th>Rationale</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr class="table-row">
-                <td>Marco needs to pick his daughter at the airport, but her flight is delayed. Marco doesn’t know what to do and feels stressed. He would like to know more about the condition of the flight his daughter is on.</td>
-                <td>Apology and suggest a solution to alleviate the stress.</td>
-                <td>We are sorry about the 'time' delayed due to 'reason' in the airport of departure. We are here to help.<br><strong>Button #1:</strong> Flight Status<br><strong>Button #2:</strong> Customer Support</td>
-                <td>
-                    <ul>
-                        <li>The flight status button gives the User a sense of control over the situation.</li>
-                        <li>The customer support button helps the User feel less alone in a situation of stress.</li>
-                    </ul>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</section>
+        <!-- Third Card -->
+        <section class="card last-card">
+            <img src="images/flight-update.png" alt="Flight status update">
+            <div class="card-content">
+                <h2>Proposed Solution</h2>
+                <p>Flight updates often feel impersonal and cold, ignoring the doubts and stress passengers experience. By integrating a friendly tone and clear steps, we help passengers feel informed and reassured.</p>
+            </div>
+        </section>
+
+        <!-- Table Section -->
+        <section class="table-container">
+            <div class="table-title">User-Centered Design Insights</div>
+            <table>
+                <thead>
+                    <tr class="table-header">
+                        <th>Scenario</th>
+                        <th>Content Description</th>
+                        <th>Content Element</th>
+                        <th>Rationale</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="table-row">
+                        <td>Marco needs to pick his daughter at the airport, but her flight is delayed. Marco doesn’t know what to do and feels stressed. He would like to know more about the condition of the flight his daughter is on.</td>
+                        <td>Apology and suggest a solution to alleviate the stress.</td>
+                        <td>We are sorry about the 'time' delayed due to 'reason' in the airport of departure. We are here to help.<br><strong>Button #1:</strong> Flight Status<br><strong>Button #2:</strong> Customer Support</td>
+                        <td>
+                            <ul>
+                                <li>The flight status button gives the User a sense of control over the situation.</li>
+                                <li>The customer support button helps the User feel less alone in a situation of stress.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </main>
+</body>
+</html>
