--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <main class="main-container">
         <!-- First Card -->
         <section class="card">
-            <img src="images/departure-board-traveler.png" alt="Traveler viewing a departure board">
+            <div class="card-image">
+                <img src="images/departure-board-traveler.png" alt="Traveler viewing a departure board">
+            </div>
             <div class="card-content">
                 <h2>Flight Delayed Messages</h2>
                 <p>Flight details can be overwhelming and unclear during delays. With a friendly tone and simple words, this project shows how better messages can ease stress for passengers.</p>
@@ -24,7 +26,9 @@
 
         <!-- Second Card -->
         <section class="card">
-            <img src="images/terminal-passenger.png" alt="Passenger waiting in the terminal">
+            <div class="card-image">
+                <img src="images/terminal-passenger.png" alt="Passenger waiting in the terminal">
+            </div>
             <div class="card-content">
                 <h2>Scenario</h2>
                 <p>Marco, a passenger waiting for his daughter's delayed flight, feels stressed and confused due to lack of updates. Clear, empathetic communication can help him feel supported.</p>
@@ -35,8 +39,10 @@
         </section>
 
         <!-- Third Card -->
-        <section class="card last-card">
-            <img src="images/flight-update.png" alt="Flight status update">
+        <section class="card">
+            <div class="card-image">
+                <img src="images/flight-update.png" alt="Flight status update">
+            </div>
             <div class="card-content">
                 <h2>Proposed Solution</h2>
                 <p>Flight updates often feel impersonal and cold, ignoring the doubts and stress passengers experience. By integrating a friendly tone and clear steps, we help passengers feel informed and reassured.</p>
@@ -48,7 +54,7 @@
             <div class="table-title">User-Centered Design Insights</div>
             <table>
                 <thead>
-                    <tr class="table-header">
+                    <tr>
                         <th>Scenario</th>
                         <th>Content Description</th>
                         <th>Content Element</th>
@@ -56,7 +62,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="table-row">
+                    <tr>
                         <td>Marco needs to pick his daughter at the airport, but her flight is delayed. Marco doesn’t know what to do and feels stressed. He would like to know more about the condition of the flight his daughter is on.</td>
                         <td>Apology and suggest a solution to alleviate the stress.</td>
                         <td>We are sorry about the 'time' delayed due to 'reason' in the airport of departure. We are here to help.<br><strong>Button #1:</strong> Flight Status<br><strong>Button #2:</strong> Customer Support</td>
