--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img src="images/terminal-passenger.png" alt="Passenger waiting in the terminal">
             <div class="card-content">
                 <h2>Scenario</h2>
-                <p>Marco, a passenger waiting for his daughter's delayed flight, feels stressed and confused due to lack of updates. Clear, empathetic communication can help him feel supported.</p>
+                <p>Marco is waiting for his daughter's delayed flight at the airport. He feels stressed and wants to know the flight's status.</p>
                 <p><strong>Problem:</strong> Flight delays cause stress and uncertainty.</p>
                 <p><strong>User Goal:</strong> Gain accurate updates and reassurance.</p>
                 <p><strong>Business Goal:</strong> Provide clear information to improve passenger satisfaction.</p>
@@ -36,10 +36,13 @@
 
         <!-- Third Card -->
         <section class="card">
-            <img src="images/flight-update.png" alt="Flight status update">
+            <img src="images/flight-status-update.png" alt="Flight status update">
             <div class="card-content">
                 <h2>Proposed Solution</h2>
                 <p>Flight updates often feel impersonal and cold, ignoring the doubts and stress passengers experience. By integrating a friendly tone and clear steps, we help passengers feel informed and reassured.</p>
+                <div class="update-message">
+                    <p><strong>Message:</strong> We're sorry for the delay to your flight. Please continue to monitor the airport screens and check Flight Tracker for updates.</p>
+                </div>
             </div>
         </section>
 
@@ -48,7 +51,7 @@
             <div class="table-title">User-Centered Design Insights</div>
             <table>
                 <thead>
-                    <tr>
+                    <tr class="table-header">
                         <th>Scenario</th>
                         <th>Content Description</th>
                         <th>Content Element</th>
@@ -56,14 +59,14 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>Marco needs to pick his daughter at the airport, but her flight is delayed. Marco doesn’t know what to do and feels stressed. He would like to know more about the condition of the flight his daughter is on.</td>
+                    <tr class="table-row">
+                        <td>Marco is waiting for his daughter's delayed flight at the airport. He feels stressed and wants to know the flight's status.</td>
                         <td>Apology and suggest a solution to alleviate the stress.</td>
-                        <td>We are sorry about the 'time' delayed due to 'reason' in the airport of departure. We are here to help.<br><strong>Button #1:</strong> Flight Status<br><strong>Button #2:</strong> Customer Support</td>
+                        <td>We are sorry about the delay due to operational issues at the departure airport. We are here to help.<br><strong>Button #1:</strong> Flight Status<br><strong>Button #2:</strong> Customer Support</td>
                         <td>
                             <ul>
                                 <li>The flight status button gives the User a sense of control over the situation.</li>
-                                <li>The customer support button helps the User feel less alone in a situation of stress.</li>
+                                <li>The customer support button helps the User feel less alone in a stressful situation.</li>
                             </ul>
                         </td>
                     </tr>
