--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 
         <!-- Third Card -->
         <section class="card">
-            <img src="https://github.com/GFiorino/Airport-Delays-Made-Clear-Enhancing-Passenger-Communication/blob/main/images/flight-update.png?raw=true alt="Flight status update">
+            <div class="card-image">
+                <img src="images/flight-status-update.png" alt="Flight status update">
+            </div>
             <div class="card-content">
                 <h2>Proposed Solution</h2>
                 <p>Flight updates often feel impersonal and cold, ignoring the doubts and stress passengers experience. By integrating a friendly tone and clear steps, we help passengers feel informed and reassured.</p>
@@ -74,5 +76,10 @@
             </table>
         </section>
     </main>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <a href="https://github.com/GFiorino" target="_blank">Back to Portfolio</a>
+    </footer>
 </body>
 </html>
