--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- Third Card -->
         <section class="card">
             <div class="card-image">
-                <img src="https://github.com/GFiorino/Airport-Delays-Made-Clear-Enhancing-Passenger-Communication/blob/main/images/flight-update.png?raw=true alt="Flight status update">
+                <img src="images/flight-update.png" alt="Flight status update">
             </div>
             <div class="card-content">
                 <h2>Proposed Solution</h2>
