--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
         </section>
     </main>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <a href="https://github.com/GFiorino" target="_blank">Back to Portfolio</a>
-    </footer>
+   <!-- Footer -->
+<footer class="footer">
+    <a href="https://gfiorino.github.io/Technical-Writing-Portfolio/" target="_blank">Back to Portfolio</a>
+</footer>
 </body>
 </html>
